--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-textarea-autosize": "^8.3.4",
     "sass": "^1.55.0"
   },
   "devDependencies": {
